--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node app.js",
     "startdev": "nodemon app.js --ignore './storage/' --ignore './public/' --ignore './commands/' --ignore './var/' ",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",    
+    "postinstall": "npm update"
   },
   "author": "",
   "license": "ISC",
